Actualizando traducción C-API a 3.9 (#1231)
* Actualizando traducción C-API a 3.9
Co-authored-by: narvmtz <51009725+narvmtz@users.noreply.github.com>
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-21 13:52+0200\n"
+"PO-Revision-Date: 2021-08-02 01:47+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/arg.rst:6
 msgid "Parsing arguments and building values"
@@ -334,7 +335,6 @@ msgid "``S`` (:class:`bytes`) [PyBytesObject \\*]"
 msgstr "``S`` (:class:`bytes`) [PyBytesObject \\*]"
 
 #: ../Doc/c-api/arg.rst:132
-#, fuzzy
 msgid ""
 "Requires that the Python object is a :class:`bytes` object, without "
 "attempting any conversion.  Raises :exc:`TypeError` if the object is not a "
@@ -342,14 +342,13 @@ msgid ""
 msgstr ""
 "Requiere que el objeto Python es un objeto :class:`bytes`, sin intentar "
 "ninguna conversión. Lanza :exc:`TypeError` si el objeto no es un objeto "
-"bytes. La variable C también puede ser declarado como :c:type:`PyObject \\*`."
+"bytes. La variable C también puede ser declarado como :c:type:`PyObject*`."
 
 #: ../Doc/c-api/arg.rst:139
 msgid "``Y`` (:class:`bytearray`) [PyByteArrayObject \\*]"
 msgstr "``Y`` (:class:`bytearray`) [PyByteArrayObject \\*]"
 
 #: ../Doc/c-api/arg.rst:137
-#, fuzzy
 msgid ""
 "Requires that the Python object is a :class:`bytearray` object, without "
 "attempting any conversion.  Raises :exc:`TypeError` if the object is not a :"
@@ -358,8 +357,8 @@ msgid ""
 msgstr ""
 "Requiere que el objeto Python es un objeto :class:`bytearray`, sin intentar "
 "ninguna conversión. Lanza  :exc:`TypeError` si el objeto no es un objecto :"
-"class:`bytearray`. La variable C también puede ser declarado como :c:type:"
-"`PyObject \\*`."
+"class:`bytearray`. La variable C también puede ser declarada como :c:type:"
+"`PyObject*`."
 
 #: ../Doc/c-api/arg.rst:156
 msgid "``u`` (:class:`str`) [const Py_UNICODE \\*]"
@@ -441,7 +440,6 @@ msgid "``U`` (:class:`str`) [PyObject \\*]"
 msgstr "``U`` (:class:`str`) [PyObject \\*]"
 
 #: ../Doc/c-api/arg.rst:184
-#, fuzzy
 msgid ""
 "Requires that the Python object is a Unicode object, without attempting any "
 "conversion.  Raises :exc:`TypeError` if the object is not a Unicode object.  "
@@ -449,7 +447,7 @@ msgid ""
 msgstr ""
 "Requiere que el objeto Python es un objeto Unicode, sin intentar ninguna "
 "conversión. Lanza :exc:`TypeError` si el objeto no es un objeto Unicode. La "
-"variable C también puede ser declarado como :c:type:`PyObject\\*`."
+"variable C también puede ser declarada como :c:type:`PyObject*`."
 
 #: ../Doc/c-api/arg.rst:192
 msgid "``w*`` (read-write :term:`bytes-like object`) [Py_buffer]"
@@ -480,7 +478,6 @@ msgstr ""
 "caracteres. Solo funciona para datos codificados sin bytes NUL integrados."
 
 #: ../Doc/c-api/arg.rst:198
-#, fuzzy
 msgid ""
 "This format requires two arguments.  The first is only used as input, and "
 "must be a :c:type:`const char*` which points to the name of an encoding as a "
@@ -491,13 +488,13 @@ msgid ""
 "The text will be encoded in the encoding specified by the first argument."
 msgstr ""
 "Este formato requiere dos argumentos. El primero solo se usa como entrada, y "
-"debe ser :c:type:`const char\\*` que apunta al nombre de una codificación "
-"como una cadena de caracteres terminada en NUL, o ``NULL``, en cuyo caso se "
+"debe ser :c:type:`const char*` que apunta al nombre de una codificación como "
+"una cadena de caracteres terminada en NUL, o ``NULL``, en cuyo caso se "
 "utiliza la codificación ``'utf-8'``. Se lanza una excepción si Python no "
 "conoce la codificación con nombre. El segundo argumento debe ser :c:type:"
-"`char\\*\\*`; el valor del puntero al que hace referencia se establecerá en "
-"un búfer con el contenido del texto del argumento. El texto se codificará en "
-"la codificación especificada por el primer argumento."
+"`char**`; el valor del puntero al que hace referencia se establecerá en un "
+"búfer con el contenido del texto del argumento. El texto se codificará en la "
+"codificación especificada por el primer argumento."
 
 #: ../Doc/c-api/arg.rst:206
 msgid ""
@@ -549,7 +546,6 @@ msgstr ""
 "entrada que contienen caracteres NUL."
 
 #: ../Doc/c-api/arg.rst:221
-#, fuzzy
 msgid ""
 "It requires three arguments.  The first is only used as input, and must be "
 "a :c:type:`const char*` which points to the name of an encoding as a NUL-"
@@ -562,15 +558,15 @@ msgid ""
 "will be set to the number of bytes in the output buffer."
 msgstr ""
 "Requiere tres argumentos. El primero solo se usa como entrada, y debe ser :c:"
-"type:`const char \\*` que apunta al nombre de una codificación como una "
-"cadena terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la "
+"type:`const char*` que apunta al nombre de una codificación como una cadena "
+"de caracteres terminada en NUL, o ``NULL``, en cuyo caso ``Se utiliza la "
 "codificación 'utf-8'``. Se lanza una excepción si Python no conoce la "
-"codificación con nombre. El segundo argumento debe ser :c:type:`char\\*\\*`; "
-"El valor del puntero al que hace referencia se establecerá en un búfer con "
-"el contenido del texto del argumento. El texto se codificará en la "
-"codificación especificada por el primer argumento. El tercer argumento debe "
-"ser un puntero a un entero; el número entero referenciado se establecerá en "
-"el número de bytes en el búfer de salida."
+"codificación con nombre. El segundo argumento debe ser :c:type:`char**`; El "
+"valor del puntero al que hace referencia se establecerá en un búfer con el "
+"contenido del texto del argumento. El texto se codificará en la codificación "
+"especificada por el primer argumento. El tercer argumento debe ser un "
+"puntero a un entero; el número entero referenciado se establecerá en el "
+"número de bytes en el búfer de salida."
 
 #: ../Doc/c-api/arg.rst:231
 msgid "There are two modes of operation:"
@@ -826,7 +822,6 @@ msgid "``O!`` (object) [*typeobject*, PyObject \\*]"
 msgstr "``O!`` (object) [*typeobject*, PyObject \\*]"
 
 #: ../Doc/c-api/arg.rst:323
-#, fuzzy
 msgid ""
 "Store a Python object in a C object pointer.  This is similar to ``O``, but "
 "takes two C arguments: the first is the address of a Python type object, the "
@@ -837,7 +832,7 @@ msgstr ""
 "Almacena un objeto Python en un puntero de objeto C. Esto es similar a "
 "``O``, pero toma dos argumentos C: el primero es la dirección de un objeto "
 "de tipo Python, el segundo es la dirección de la variable C (de tipo :c:type:"
-"`PyObject\\*`) en el que se almacena el puntero del objeto. Si el objeto "
+"`PyObject*`) en el que se almacena el puntero del objeto. Si el objeto "
 "Python no tiene el tipo requerido, se lanza :exc:`TypeError`."
 
 #: ../Doc/c-api/arg.rst:352 ../Doc/c-api/arg.rst:657
@@ -845,7 +840,6 @@ msgid "``O&`` (object) [*converter*, *anything*]"
 msgstr "``O&`` (object) [*converter*, *anything*]"
 
 #: ../Doc/c-api/arg.rst:332
-#, fuzzy
 msgid ""
 "Convert a Python object to a C variable through a *converter* function.  "
 "This takes two arguments: the first is a function, the second is the address "
@@ -855,11 +849,10 @@ msgstr ""
 "Convierte un objeto Python en una variable C a través de una función "
 "*converter*. Esto requiere dos argumentos: el primero es una función, el "
 "segundo es la dirección de una variable C (de tipo arbitrario), convertida "
-"a :c:type:`void \\*`. La función *converter* a su vez se llama de la "
-"siguiente manera::"
+"a :c:type:`void *`. La función *converter* a su vez se llama de la siguiente "
+"manera::"
 
 #: ../Doc/c-api/arg.rst:339
-#, fuzzy
 msgid ""
 "where *object* is the Python object to be converted and *address* is the :c:"
 "type:`void*` argument that was passed to the :c:func:`PyArg_Parse\\*` "
@@ -869,11 +862,11 @@ msgid ""
 "*address* unmodified."
 msgstr ""
 "donde *object* es el objeto de Python a convertir y *address* es el "
-"argumento :c:type:`void\\*` que se pasó a la función :c:func:`PyArg_Parse"
-"\\*`. El *status* retornado debe ser ``1`` para una conversión exitosa y "
-"``0`` si la conversión ha fallado. Cuando la conversión falla, la función "
-"*converter* debería generar una excepción y dejar el contenido de *addres* "
-"sin modificar."
+"argumento :c:type:`void*` que se pasó a la función :c:func:`PyArg_Parse\\*`. "
+"El *status* retornado debe ser ``1`` para una conversión exitosa y ``0`` si "
+"la conversión ha fallado. Cuando la conversión falla, la función *converter* "
+"debería generar una excepción y dejar el contenido de *address* sin "
+"modificar."
 
 #: ../Doc/c-api/arg.rst:345
 msgid ""
@@ -1138,7 +1131,6 @@ msgstr ""
 "descomponer otras tuplas, y puede continuar usándose para ese propósito."
 
 #: ../Doc/c-api/arg.rst:479
-#, fuzzy
 msgid ""
 "A simpler form of parameter retrieval which does not use a format string to "
 "specify the types of the arguments.  Functions which use this method to "
@@ -1162,7 +1154,7 @@ msgstr ""
 "ser una tupla. La longitud de la tupla debe ser al menos *min* y no más de "
 "*max*; *min* y *max* pueden ser iguales. Se deben pasar argumentos "
 "adicionales a la función, cada uno de los cuales debe ser un puntero a una "
-"variable :c:type:`PyObject\\*`; estos se completarán con los valores de "
+"variable :c:type:`PyObject*`; estos se completarán con los valores de "
 "*args*; contendrán referencias prestadas. Las variables que corresponden a "
 "parámetros opcionales no dados por *args* no se completarán; estos deben ser "
 "inicializados por quien llama. Esta función retorna verdadero en caso de "
@@ -1497,7 +1489,6 @@ msgstr ""
 "de objetos en la lista de argumentos."
 
 #: ../Doc/c-api/arg.rst:654
-#, fuzzy
 msgid ""
 "Convert *anything* to a Python object through a *converter* function.  The "
 "function is called with *anything* (which should be compatible with :c:type:"
@@ -1506,8 +1497,8 @@ msgid ""
 msgstr ""
 "Convierte *anything* a un objeto Python a través de una función *converter*. "
 "La función se llama con *anything* (que debería ser compatible con :c:type:"
-"`void \\*`) como argumento y debería retornar un \"nuevo\" objeto de Python, "
-"o ``NULL`` si se produjo un error."
+"`void*`) como argumento y debería retornar un \"nuevo\" objeto de Python, o "
+"``NULL`` si se produjo un error."
 
 #: ../Doc/c-api/arg.rst:660
 msgid ""
