--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-07 09:39+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 17:38+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/weakref.rst:6
 msgid "Weak Reference Objects"
@@ -39,25 +40,27 @@ msgstr ""
 "como un proxy del objeto original tanto como pueda."
 
 #: ../Doc/c-api/weakref.rst:16
-#, fuzzy
 msgid ""
 "Return true if *ob* is either a reference or proxy object.  This function "
 "always succeeds."
-msgstr "Retorna verdad (true) si *ob* es una referencia o un objeto proxy."
+msgstr ""
+"Retorna verdadero (true) si *ob* es una referencia o un objeto proxy. Esta "
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:22
-#, fuzzy
 msgid ""
 "Return true if *ob* is a reference object.  This function always succeeds."
-msgstr "Retorna verdad (true) si *ob* es un objeto de referencia."
+msgstr ""
+"Retorna verdadero (true) si *ob* es un objeto de referencia. Esta función "
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:27
-#, fuzzy
 msgid "Return true if *ob* is a proxy object.  This function always succeeds."
-msgstr "Retorna verdad (true) si *ob* es un objeto proxy."
+msgstr ""
+"Retorna verdadero (true) si *ob* es un objeto proxy. Esta función siempre "
+"finaliza con éxito."
 
 #: ../Doc/c-api/weakref.rst:32
-#, fuzzy
 msgid ""
 "Return a weak reference object for the object *ob*.  This will always return "
 "a new reference, but is not guaranteed to create a new object; an existing "
@@ -79,7 +82,6 @@ msgstr ""
 "``NULL``, esto retornará ``NULL``  y causará un :exc:`TypeError`."
 
 #: ../Doc/c-api/weakref.rst:44
-#, fuzzy
 msgid ""
 "Return a weak reference proxy object for the object *ob*.  This will always "
 "return a new reference, but is not guaranteed to create a new object; an "
