--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-21 20:48+0200\n"
+"PO-Revision-Date: 2021-08-01 20:18+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/bytes.rst:6
 msgid "Bytes Objects"
@@ -47,22 +48,20 @@ msgstr ""
 "es el mismo objeto que :class:`bytes` en la capa de Python."
 
 #: ../Doc/c-api/bytes.rst:27
-#, fuzzy
 msgid ""
 "Return true if the object *o* is a bytes object or an instance of a subtype "
 "of the bytes type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto bytes o una instancia de un "
-"subtipo del tipo bytes."
+"subtipo del tipo bytes. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/bytes.rst:33
-#, fuzzy
 msgid ""
 "Return true if the object *o* is a bytes object, but not an instance of a "
 "subtype of the bytes type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto bytes, pero no una instancia "
-"de un subtipo del tipo bytes."
+"de un subtipo del tipo bytes. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/bytes.rst:39
 msgid ""
@@ -124,7 +123,7 @@ msgstr "*n/a*"
 #: ../Doc/c-api/bytes.rst:70
 #, python-format
 msgid "The literal % character."
-msgstr "El carácter literal %."
+msgstr "El carácter literal *%*."
 
 #: ../Doc/c-api/bytes.rst:72
 #, python-format
