--- a/c-api/capsule.po
+++ b/c-api/capsule.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-16 23:16+0200\n"
+"PO-Revision-Date: 2021-08-01 20:17+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/capsule.rst:6
 msgid "Capsules"
@@ -33,7 +34,6 @@ msgstr ""
 "estos objetos."
 
 #: ../Doc/c-api/capsule.rst:17
-#, fuzzy
 msgid ""
 "This subtype of :c:type:`PyObject` represents an opaque value, useful for C "
 "extension modules who need to pass an opaque value (as a :c:type:`void*` "
@@ -44,11 +44,10 @@ msgid ""
 msgstr ""
 "Este subtipo de :c:type:`PyObject` representa un valor opaco, útil para los "
 "módulos de extensión C que necesitan pasar un valor opaco (como un puntero :"
-"c:type:`void\\*`) a través del código Python a otro código C . A menudo se "
-"usa para hacer que un puntero de función C definido en un módulo esté "
-"disponible para otros módulos, por lo que el mecanismo de importación "
-"regular se puede usar para acceder a las API C definidas en módulos cargados "
-"dinámicamente."
+"c:type:`void*`) a través del código Python a otro código C . A menudo se usa "
+"para hacer que un puntero de función C definido en un módulo esté disponible "
+"para otros módulos, por lo que el mecanismo de importación regular se puede "
+"usar para acceder a las API C definidas en módulos cargados dinámicamente."
 
 #: ../Doc/c-api/capsule.rst:27
 msgid "The type of a destructor callback for a capsule.  Defined as::"
@@ -65,11 +64,12 @@ msgstr ""
 "devoluciones de llamada de `PyCapsule_Destructor`."
 
 #: ../Doc/c-api/capsule.rst:37
-#, fuzzy
 msgid ""
 "Return true if its argument is a :c:type:`PyCapsule`.  This function always "
 "succeeds."
-msgstr "Retorna verdadero si su argumento es a :c:type:`PyCapsule`."
+msgstr ""
+"Retorna verdadero si su argumento es a :c:type:`PyCapsule`. Esta función "
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/capsule.rst:43
 msgid ""
