--- a/c-api/complex.po
+++ b/c-api/complex.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-16 16:48+0200\n"
+"PO-Revision-Date: 2021-08-01 20:16+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/complex.rst:6
 msgid "Complex Number Objects"
@@ -149,22 +150,22 @@ msgstr ""
 "Python."
 
 #: ../Doc/c-api/complex.rst:96
-#, fuzzy
 msgid ""
 "Return true if its argument is a :c:type:`PyComplexObject` or a subtype of :"
 "c:type:`PyComplexObject`.  This function always succeeds."
 msgstr ""
-"Retorna verdadero si su argumento es a :c:type:`PyComplexObject` o un "
-"subtipo de :c:type:`PyComplexObject`."
+"Retorna verdadero si su argumento es un :c:type:`PyComplexObject` o un "
+"subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con "
+"éxito."
 
 #: ../Doc/c-api/complex.rst:102
-#, fuzzy
 msgid ""
 "Return true if its argument is a :c:type:`PyComplexObject`, but not a "
 "subtype of :c:type:`PyComplexObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyComplexObject`, pero no "
-"un subtipo de :c:type:`PyComplexObject`."
+"un subtipo de :c:type:`PyComplexObject`. Esta función siempre finaliza con "
+"éxito."
 
 #: ../Doc/c-api/complex.rst:108
 msgid ""
