--- a/c-api/gen.po
+++ b/c-api/gen.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 15:39+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 20:11+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/gen.rst:6
 msgid "Generator Objects"
@@ -46,21 +47,20 @@ msgid "The type object corresponding to generator objects."
 msgstr "El objeto tipo correspondiente a los objetos generadores."
 
 #: ../Doc/c-api/gen.rst:25
-#, fuzzy
 msgid ""
 "Return true if *ob* is a generator object; *ob* must not be ``NULL``.  This "
 "function always succeeds."
 msgstr ""
-"Retorna verdadero si *ob* es un objeto generador; *ob* no debe ser ``NULL``."
+"Retorna verdadero si *ob* es un objeto generador; *ob* no debe ser ``NULL``. "
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/gen.rst:31
-#, fuzzy
 msgid ""
 "Return true if *ob*'s type is :c:type:`PyGen_Type`; *ob* must not be "
 "``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si el tipo de *ob* es :c:type:`PyGen_Type`; *ob* no debe "
-"ser ``NULL``."
+"ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/gen.rst:37
 msgid ""
