--- a/c-api/init.po
+++ b/c-api/init.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-25 00:27+0200\n"
+"PO-Revision-Date: 2021-08-02 02:04+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/init.rst:8
 msgid "Initialization, Finalization, and Threads"
@@ -1404,28 +1405,29 @@ msgstr ""
 "pertenezcan."
 
 #: ../Doc/c-api/init.rst:832
-#, fuzzy
 msgid ""
 "This data structure represents the state of a single thread.  The only "
 "public data member is :attr:`interp` (:c:type:`PyInterpreterState *`), which "
 "points to this thread's interpreter state."
 msgstr ""
 "Esta estructura de datos representa el estado de un solo hilo. El único "
-"miembro de datos públicos es :c:type:`PyInterpreterState \\*`:attr:`interp`, "
-"que apunta al estado del intérprete de este hilo."
+"miembro de datos públicos es :attr:`interp` (:c:type:`PyInterpreterState "
+"*`), que apunta al estado del intérprete de este hilo."
 
 #: ../Doc/c-api/init.rst:845
 msgid "Deprecated function which does nothing."
-msgstr ""
+msgstr "Función deprecada que no hace nada."
 
 #: ../Doc/c-api/init.rst:847
 msgid ""
 "In Python 3.6 and older, this function created the GIL if it didn't exist."
 msgstr ""
+"En Python 3.6 y versiones anteriores, esta función creaba el GIL si no "
+"existía."
 
 #: ../Doc/c-api/init.rst:849
 msgid "The function now does nothing."
-msgstr ""
+msgstr "La función ahora no hace nada."
 
 #: ../Doc/c-api/init.rst:852
 msgid ""
@@ -1755,6 +1757,8 @@ msgid ""
 "This function now calls the :c:member:`PyThreadState.on_delete` callback. "
 "Previously, that happened in :c:func:`PyThreadState_Delete`."
 msgstr ""
+"Esta función ahora llama a la retrollamada :c:member:`PyThreadState."
+"on_delete`. Anteriormente, eso sucedía en :c:func:`PyThreadState_Delete`."
 
 #: ../Doc/c-api/init.rst:1062
 msgid ""
@@ -1767,59 +1771,64 @@ msgstr ""
 "llamada previa a :c:func:`PyThreadState_Clear`."
 
 #: ../Doc/c-api/init.rst:1069
-#, fuzzy
 msgid ""
 "Destroy the current thread state and release the global interpreter lock. "
 "Like :c:func:`PyThreadState_Delete`, the global interpreter lock need not be "
 "held. The thread state must have been reset with a previous call to :c:func:"
 "`PyThreadState_Clear`."
 msgstr ""
-"Destruye un objeto de estado de hilo. No es necesario mantener el bloqueo "
-"global del intérprete. El estado del hilo debe haberse restablecido con una "
-"llamada previa a :c:func:`PyThreadState_Clear`."
+"Destruye un objeto de estado de hilo y suelta el bloqueo del intérprete "
+"global. Como :c:func:`PyThreadState_Delete`, no es necesario mantener el "
+"bloqueo del intérprete global. El estado del hilo debe haberse restablecido "
+"con una llamada anterior a :c:func:`PyThreadState_Clear`."
 
 #: ../Doc/c-api/init.rst:1077
 msgid "Get the current frame of the Python thread state *tstate*."
-msgstr ""
+msgstr "Obtiene el marco actual del estado del hilo de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1079
 msgid ""
 "Return a strong reference. Return ``NULL`` if no frame is currently "
 "executing."
 msgstr ""
+"Retorna una referencia sólida. Retorna ``NULL`` si no se está ejecutando "
+"ningún marco."
 
 #: ../Doc/c-api/init.rst:1082
 msgid "See also :c:func:`PyEval_GetFrame`."
-msgstr ""
+msgstr "Vea también :c:func:`PyEval_GetFrame`."
 
 #: ../Doc/c-api/init.rst:1084 ../Doc/c-api/init.rst:1093
 #: ../Doc/c-api/init.rst:1102
 msgid "*tstate* must not be ``NULL``."
-msgstr ""
+msgstr "*tstate* no debe ser ``NULL``."
 
 #: ../Doc/c-api/init.rst:1091
 msgid ""
 "Get the unique thread state identifier of the Python thread state *tstate*."
 msgstr ""
+"Obtiene el identificador de estado de subproceso único del estado del hilo "
+"de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1100
 msgid "Get the interpreter of the Python thread state *tstate*."
-msgstr ""
+msgstr "Obtiene el intérprete del estado del hilo de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1109
-#, fuzzy
 msgid "Get the current interpreter."
-msgstr "Retorna el objeto de estado del intérprete principal."
+msgstr "Obtiene el intérprete actual."
 
 #: ../Doc/c-api/init.rst:1111
 msgid ""
 "Issue a fatal error if there no current Python thread state or no current "
 "interpreter. It cannot return NULL."
 msgstr ""
+"Emite un error fatal si no hay un estado actual del hilo de Python o no hay "
+"un intérprete actual. No puede retornar NULL."
 
 #: ../Doc/c-api/init.rst:1114 ../Doc/c-api/init.rst:1124
 msgid "The caller must hold the GIL."
-msgstr ""
+msgstr "La persona que llama debe retener el GIL."
 
 #: ../Doc/c-api/init.rst:1121
 msgid ""
@@ -1850,29 +1859,32 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1142
 msgid "Type of a frame evaluation function."
-msgstr ""
+msgstr "Tipo de función de evaluación de marcos."
 
 #: ../Doc/c-api/init.rst:1144
 msgid ""
 "The *throwflag* parameter is used by the ``throw()`` method of generators: "
 "if non-zero, handle the current exception."
 msgstr ""
+"El parámetro *throwflag* es usado por el método de generadores ``throw()``: "
+"si no es cero, maneja la excepción actual."
 
 #: ../Doc/c-api/init.rst:1147
 msgid "The function now takes a *tstate* parameter."
-msgstr ""
+msgstr "La función ahora recibe un parámetro *tstate*."
 
 #: ../Doc/c-api/init.rst:1152
 msgid "Get the frame evaluation function."
-msgstr ""
+msgstr "Obtiene la función de evaluación de marcos."
 
 #: ../Doc/c-api/init.rst:1154 ../Doc/c-api/init.rst:1162
 msgid "See the :pep:`523` \"Adding a frame evaluation API to CPython\"."
 msgstr ""
+"Consulte :pep:`523` \"Adición de una API de evaluación de marcos a CPython\"."
 
 #: ../Doc/c-api/init.rst:1160
 msgid "Set the frame evaluation function."
-msgstr ""
+msgstr "Configura la función de evaluación del marco."
 
 #: ../Doc/c-api/init.rst:1169
 msgid ""
@@ -1918,7 +1930,6 @@ msgstr ""
 "long`."
 
 #: ../Doc/c-api/init.rst:1192
-#, fuzzy
 msgid ""
 "Acquire the global interpreter lock and set the current thread state to "
 "*tstate*, which must not be ``NULL``.  The lock must have been created "
@@ -1927,7 +1938,7 @@ msgstr ""
 "Adquiere el bloqueo global del intérprete y establece el estado actual del "
 "hilo en *tstate*, que no debe ser ``NULL``. El bloqueo debe haber sido "
 "creado anteriormente. Si este hilo ya tiene el bloqueo, se produce un "
-"*deadlock*."
+"deadlock."
 
 #: ../Doc/c-api/init.rst:1203 ../Doc/c-api/init.rst:1241
 msgid ""
@@ -2306,6 +2317,9 @@ msgid ""
 "Otherwise, the function *func* can be scheduled to be called from the wrong "
 "interpreter."
 msgstr ""
+"Para llamar a esta función en un subinterprete, quien llama debe mantener el "
+"GIL. De lo contrario, la función *func* se puede programar para que se llame "
+"desde el intérprete incorrecto."
 
 #: ../Doc/c-api/init.rst:1422
 msgid ""
@@ -2330,6 +2344,10 @@ msgid ""
 "from the main interpreter. Each subinterpreter now has its own list of "
 "scheduled calls."
 msgstr ""
+"Si esta función se llama en un subinterprete, la función *func* ahora está "
+"programada para ser llamada desde el subinterprete, en lugar de ser llamada "
+"desde el intérprete principal. Cada subinterprete ahora tiene su propia "
+"lista de llamadas programadas."
 
 #: ../Doc/c-api/init.rst:1440
 msgid "Profiling and Tracing"
@@ -2552,7 +2570,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1557 ../Doc/c-api/init.rst:1569
 msgid "The caller must hold the :term:`GIL`."
-msgstr ""
+msgstr "La persona que llama debe mantener el :term:`GIL`."
 
 #: ../Doc/c-api/init.rst:1562
 msgid ""
@@ -2625,7 +2643,6 @@ msgid "Thread Local Storage Support"
 msgstr "Soporte de almacenamiento local de hilo"
 
 #: ../Doc/c-api/init.rst:1618
-#, fuzzy
 msgid ""
 "The Python interpreter provides low-level support for thread-local storage "
 "(TLS) which wraps the underlying native TLS implementation to support the "
@@ -2638,8 +2655,8 @@ msgstr ""
 "almacenamiento local de hilos (TLS) que envuelve la implementación de TLS "
 "nativa subyacente para admitir la API de almacenamiento local de hilos de "
 "nivel Python (:class:`threading.local`). Las API de nivel CPython C son "
-"similares a las ofrecidas por *pthreads* y Windows: use una clave de hilo y "
-"funciones para asociar un valor de :c:type:`void\\*` por hilo."
+"similares a las ofrecidas por pthreads y Windows: use una clave de hilo y "
+"funciones para asociar un valor de :c:type:`void*` por hilo."
 
 #: ../Doc/c-api/init.rst:1625
 msgid ""
@@ -2659,7 +2676,6 @@ msgstr ""
 "hilos."
 
 #: ../Doc/c-api/init.rst:1632
-#, fuzzy
 msgid ""
 "None of these API functions handle memory management on behalf of the :c:"
 "type:`void*` values.  You need to allocate and deallocate them yourself. If "
@@ -2667,10 +2683,9 @@ msgid ""
 "don't do refcount operations on them either."
 msgstr ""
 "Ninguna de estas funciones API maneja la administración de memoria en nombre "
-"de los valores :c:type:`void\\*`. Debe asignarlos y desasignarlos usted "
-"mismo. Si los valores :c:type:`void\\*` son :c:type:`PyObject\\*`, estas "
-"funciones tampoco realizan operaciones de conteo de referencias (*refcount*) "
-"en ellos."
+"de los valores :c:type:`void*`. Debe asignarlos y desasignarlos usted mismo. "
+"Si los valores :c:type:`void*` son :c:type:`PyObject*`, estas funciones "
+"tampoco realizan operaciones de conteo de referencias en ellos."
 
 #: ../Doc/c-api/init.rst:1640
 msgid "Thread Specific Storage (TSS) API"
@@ -2816,24 +2831,22 @@ msgstr ""
 "la misma llave; llamarla en una llave ya destruida es un *no-op*."
 
 #: ../Doc/c-api/init.rst:1730
-#, fuzzy
 msgid ""
 "Return a zero value to indicate successfully associating a :c:type:`void*` "
 "value with a TSS key in the current thread.  Each thread has a distinct "
 "mapping of the key to a :c:type:`void*` value."
 msgstr ""
 "Retorna un valor cero para indicar la asociación exitosa de un valor a :c:"
-"type:`void\\*` con una clave TSS en el hilo actual. Cada hilo tiene un mapeo "
-"distinto de la clave a un valor :c:type:`void\\*`."
+"type:`void*` con una clave TSS en el hilo actual. Cada hilo tiene un mapeo "
+"distinto de la clave a un valor :c:type:`void*`."
 
 #: ../Doc/c-api/init.rst:1737
-#, fuzzy
 msgid ""
 "Return the :c:type:`void*` value associated with a TSS key in the current "
 "thread.  This returns ``NULL`` if no value is associated with the key in the "
 "current thread."
 msgstr ""
-"Retorna el valor :c:type:`void\\*` asociado con una clave TSS en el hilo "
+"Retorna el valor :c:type:`void*` asociado con una clave TSS en el hilo "
 "actual. Esto retorna ``NULL`` si no hay ningún valor asociado con la clave "
 "en el hilo actual."
 
