--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-23 12:35+0200\n"
+"PO-Revision-Date: 2021-08-02 01:43+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/init_config.rst:7
 msgid "Python Initialization Configuration"
@@ -152,9 +153,8 @@ msgid ":c:func:`Py_RunMain`"
 msgstr ":c:func:`Py_RunMain`"
 
 #: ../Doc/c-api/init_config.rst:46
-#, fuzzy
 msgid ":c:func:`Py_GetArgcArgv`"
-msgstr ":c:func:`PyConfig_SetArgv`"
+msgstr ":c:func:`Py_GetArgcArgv`"
 
 #: ../Doc/c-api/init_config.rst:48
 msgid ""
@@ -743,6 +743,9 @@ msgid ""
 "time by ``--with-platlibdir``, overrideable by the ``PYTHONPLATLIBDIR`` "
 "environment variable."
 msgstr ""
+":data:`sys.platlibdir`: nombre del directorio de la biblioteca de la "
+"plataforma, establecido en el momento de la configuración por ``--with-"
+"platlibdir``, anulable por la variable de entorno ``PYTHONPLATLIBDIR``."
 
 #: ../Doc/c-api/init_config.rst:450
 msgid ""
@@ -794,6 +797,8 @@ msgstr ""
 #: ../Doc/c-api/init_config.rst:478
 msgid "If non-zero, enable the :ref:`Python Development Mode <devmode>`."
 msgstr ""
+"Si es distinto de cero, habilita :ref:`Modo de desarrollo de Python "
+"<devmode>`."
 
 #: ../Doc/c-api/init_config.rst:482
 msgid "If non-zero, dump all objects which are still alive at exit."
@@ -802,7 +807,7 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:484
 msgid "``Py_TRACE_REFS`` macro must be defined in build."
-msgstr ""
+msgstr "El macro ``Py_TRACE_REFS`` debe ser definido en la construcción."
 
 #: ../Doc/c-api/init_config.rst:488
 msgid ":data:`sys.exec_prefix`."
@@ -1115,15 +1120,16 @@ msgstr ":data:`sys._xoptions`."
 
 #: ../Doc/c-api/init_config.rst:700
 msgid "Enable PEG parser? Default: 1."
-msgstr ""
+msgstr "Habilitar parser PEG? Por defecto: 1."
 
 #: ../Doc/c-api/init_config.rst:702
 msgid "Set to 0 by :option:`-X oldparser <-X>` and :envvar:`PYTHONOLDPARSER`."
 msgstr ""
+"Establecido en 0 por :option:`-X oldparser <-X>` y :envvar:`PYTHONOLDPARSER`."
 
 #: ../Doc/c-api/init_config.rst:704
 msgid "See also :pep:`617`."
-msgstr ""
+msgstr "Vea también :pep:`617`."
 
 #: ../Doc/c-api/init_config.rst:708
 msgid ""
@@ -1146,7 +1152,7 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:718
 msgid "The ``show_alloc_count`` field has been removed."
-msgstr ""
+msgstr "El campo ``show_alloc_count`` fue removido."
 
 #: ../Doc/c-api/init_config.rst:722
 msgid "Initialization with PyConfig"
@@ -1278,9 +1284,8 @@ msgid ":c:member:`PyConfig.home`"
 msgstr ":c:member:`PyConfig.home`"
 
 #: ../Doc/c-api/init_config.rst:896
-#, fuzzy
 msgid ":c:member:`PyConfig.platlibdir`"
-msgstr ":c:member:`~PyConfig.isolated`"
+msgstr ":c:member:`PyConfig.platlibdir`"
 
 #: ../Doc/c-api/init_config.rst:897
 msgid ":c:member:`PyConfig.pathconfig_warnings`"
@@ -1523,11 +1528,13 @@ msgstr ""
 
 #: ../Doc/c-api/init_config.rst:989
 msgid "Py_GetArgcArgv()"
-msgstr ""
+msgstr "Py_GetArgcArgv()"
 
 #: ../Doc/c-api/init_config.rst:993
 msgid "Get the original command line arguments, before Python modified them."
 msgstr ""
+"Obtiene los argumentos originales de la línea de comandos, antes de que "
+"Python los modificara."
 
 #: ../Doc/c-api/init_config.rst:997
 msgid "Multi-Phase Initialization Private Provisional API"
@@ -1622,6 +1629,8 @@ msgid ""
 ":c:member:`PyConfig._isolated_interpreter`: if non-zero, disallow threads, "
 "subprocesses and fork."
 msgstr ""
+":c:member:`PyConfig._isolated_interpreter`: si no es cero, no permite hilos, "
+"subprocesos y bifurcaciones."
 
 #: ../Doc/c-api/init_config.rst:1030
 msgid ""
