--- a/c-api/iterator.po
+++ b/c-api/iterator.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 15:46+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 20:11+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/iterator.rst:6
 msgid "Iterator Objects"
@@ -50,11 +51,12 @@ msgstr ""
 "tipos de secuencia incorporados."
 
 #: ../Doc/c-api/iterator.rst:24
-#, fuzzy
 msgid ""
 "Return true if the type of *op* is :c:data:`PySeqIter_Type`.  This function "
 "always succeeds."
-msgstr "Retorna verdadero si el tipo de *op* es :c:data:`PySeqIter_Type`."
+msgstr ""
+"Retorna verdadero si el tipo de *op* es :c:data:`PySeqIter_Type`. Esta "
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/iterator.rst:30
 msgid ""
@@ -76,11 +78,12 @@ msgstr ""
 "func:`iter`."
 
 #: ../Doc/c-api/iterator.rst:43
-#, fuzzy
 msgid ""
 "Return true if the type of *op* is :c:data:`PyCallIter_Type`.  This function "
 "always succeeds."
-msgstr "Retorna verdadero si el tipo de *op* es :c:data:`PyCallIter_Type`."
+msgstr ""
+"Retorna verdadero si el tipo de *op* es :c:data:`PyCallIter_Type`. Esta "
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/iterator.rst:49
 msgid ""
