--- a/c-api/list.po
+++ b/c-api/list.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 23:47+0200\n"
+"PO-Revision-Date: 2021-08-01 20:11+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/list.rst:6
 msgid "List Objects"
@@ -39,22 +40,20 @@ msgstr ""
 "Python. Este es el mismo objeto que :class:`list` en la capa de Python."
 
 #: ../Doc/c-api/list.rst:24
-#, fuzzy
 msgid ""
 "Return true if *p* is a list object or an instance of a subtype of the list "
 "type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto de lista o una instancia de un subtipo "
-"del tipo lista."
+"del tipo lista. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/list.rst:30
-#, fuzzy
 msgid ""
 "Return true if *p* is a list object, but not an instance of a subtype of the "
 "list type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto lista, pero no una instancia de un "
-"subtipo del tipo lista."
+"subtipo del tipo lista. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/list.rst:36
 msgid "Return a new list of length *len* on success, or ``NULL`` on failure."
