--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-21 21:14+0200\n"
+"PO-Revision-Date: 2021-08-02 01:22+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/memory.rst:8
 msgid "Memory Management"
@@ -199,12 +200,11 @@ msgstr ""
 
 #: ../Doc/c-api/memory.rst:112 ../Doc/c-api/memory.rst:183
 #: ../Doc/c-api/memory.rst:285
-#, fuzzy
 msgid ""
 "Allocates *n* bytes and returns a pointer of type :c:type:`void*` to the "
 "allocated memory, or ``NULL`` if the request fails."
 msgstr ""
-"Asigna *n* bytes y retorna un puntero de tipo :c:type:`void\\*` a la memoria "
+"Asigna *n* bytes y retorna un puntero de tipo :c:type:`void*` a la memoria "
 "asignada, o ``NULL`` si la solicitud falla."
 
 #: ../Doc/c-api/memory.rst:115
@@ -219,14 +219,13 @@ msgstr ""
 
 #: ../Doc/c-api/memory.rst:122 ../Doc/c-api/memory.rst:193
 #: ../Doc/c-api/memory.rst:295
-#, fuzzy
 msgid ""
 "Allocates *nelem* elements each whose size in bytes is *elsize* and returns "
 "a pointer of type :c:type:`void*` to the allocated memory, or ``NULL`` if "
 "the request fails. The memory is initialized to zeros."
 msgstr ""
 "Asigna *nelem* elementos cada uno cuyo tamaño en bytes es *elsize* y retorna "
-"un puntero de tipo :c:type:`void\\*` a la memoria asignada, o ``NULL`` si la "
+"un puntero de tipo :c:type:`void*` a la memoria asignada, o ``NULL`` si la "
 "solicitud falla. La memoria se inicializa a ceros."
 
 #: ../Doc/c-api/memory.rst:126
@@ -399,18 +398,16 @@ msgstr ""
 "Tenga en cuenta que *TYPE* se refiere a cualquier tipo de C."
 
 #: ../Doc/c-api/memory.rst:235
-#, fuzzy
 msgid ""
 "Same as :c:func:`PyMem_Malloc`, but allocates ``(n * sizeof(TYPE))`` bytes "
 "of memory.  Returns a pointer cast to :c:type:`TYPE*`.  The memory will not "
 "have been initialized in any way."
 msgstr ""
 "Igual que :c:func:`PyMem_Malloc`, pero asigna ``(n * sizeof(TYPE))`` bytes "
-"de memoria. retorna una conversión de puntero a :c:type:`TYPE\\*`. La "
-"memoria no se habrá inicializado de ninguna manera."
+"de memoria. Retorna una conversión de puntero a :c:type:`TYPE*`. La memoria "
+"no se habrá inicializado de ninguna manera."
 
 #: ../Doc/c-api/memory.rst:242
-#, fuzzy
 msgid ""
 "Same as :c:func:`PyMem_Realloc`, but the memory block is resized to ``(n * "
 "sizeof(TYPE))`` bytes.  Returns a pointer cast to :c:type:`TYPE*`. On "
@@ -418,9 +415,9 @@ msgid ""
 "event of failure."
 msgstr ""
 "Igual que :c:func:`PyMem_Realloc`, pero el bloque de memoria cambia de "
-"tamaño a ``(n * sizeof(TYPE))`` bytes. retorna una conversión de puntero a :"
-"c:type:`TYPE\\*`. Al regresar, *p* será un puntero a la nueva área de "
-"memoria, o ``NULL`` en caso de falla."
+"tamaño a ``(n * sizeof(TYPE))`` bytes. Retorna una conversión de puntero a :"
+"c:type:`TYPE*`. Al retornar, *p* será un puntero a la nueva área de memoria, "
+"o ``NULL`` en caso de falla."
 
 #: ../Doc/c-api/memory.rst:247
 msgid ""
@@ -973,9 +970,8 @@ msgid "allocate an arena of size bytes"
 msgstr "asignar una arena de bytes de tamaño"
 
 #: ../Doc/c-api/memory.rst:519
-#, fuzzy
 msgid "``void free(void *ctx, void *ptr, size_t size)``"
-msgstr "``void* realloc(void *ctx, void *ptr, size_t new_size)``"
+msgstr "``void free(void *ctx, void *ptr, size_t size)``"
 
 #: ../Doc/c-api/memory.rst:519
 msgid "free an arena"
