--- a/c-api/reflection.po
+++ b/c-api/reflection.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 02:56+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 20:24+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/reflection.rst:6
 msgid "Reflection"
@@ -60,32 +61,36 @@ msgstr ""
 
 #: ../Doc/c-api/reflection.rst:31
 msgid "See also :c:func:`PyThreadState_GetFrame`."
-msgstr ""
+msgstr "Vea también :c:func:`PyThreadState_GetFrame`."
 
 #: ../Doc/c-api/reflection.rst:36
 msgid "Get the *frame* next outer frame."
-msgstr ""
+msgstr "Obtiene el *frame* siguiente marco (*frame*) exterior."
 
 #: ../Doc/c-api/reflection.rst:38
 msgid "Return a strong reference, or ``NULL`` if *frame* has no outer frame."
 msgstr ""
+"Devuelve una referencia fuerte o ``NULL`` si *frame* no tiene un marco "
+"exterior."
 
 #: ../Doc/c-api/reflection.rst:40 ../Doc/c-api/reflection.rst:60
 msgid "*frame* must not be ``NULL``."
-msgstr ""
+msgstr "*frame* no debe ser ``NULL``."
 
 #: ../Doc/c-api/reflection.rst:47
 msgid "Get the *frame* code."
-msgstr ""
+msgstr "Obtiene el código *frame*."
 
 #: ../Doc/c-api/reflection.rst:49
 msgid "Return a strong reference."
-msgstr ""
+msgstr "Retorna una referencia fuerte."
 
 #: ../Doc/c-api/reflection.rst:51
 msgid ""
 "*frame* must not be ``NULL``. The result (frame code) cannot be ``NULL``."
 msgstr ""
+"*frame* no debe ser ``NULL``. El resultado (código del marco) no puede ser "
+"``NULL``."
 
 #: ../Doc/c-api/reflection.rst:58
 msgid "Return the line number that *frame* is currently executing."
