--- a/c-api/type.po
+++ b/c-api/type.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-17 22:05+0200\n"
+"PO-Revision-Date: 2021-08-02 01:37+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/type.rst:6
 msgid "Type Objects"
@@ -40,25 +41,24 @@ msgstr ""
 "`type` en la capa Python."
 
 #: ../Doc/c-api/type.rst:24
-#, fuzzy
 msgid ""
 "Return non-zero if the object *o* is a type object, including instances of "
 "types derived from the standard type object.  Return 0 in all other cases. "
 "This function always succeeds."
 msgstr ""
-"Retorna verdadero si el objeto *o* es un objeto tipo, incluidas las "
-"instancias de tipos derivados del objeto tipo estándar. Retorna falso en "
-"todos los demás casos."
+"Retorna un valor distinto de cero si el objeto *o* es un objeto tipo, "
+"incluidas las instancias de tipos derivados del objeto de tipo estándar. "
+"Retorna 0 en todos los demás casos. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/type.rst:31
-#, fuzzy
 msgid ""
 "Return non-zero if the object *o* is a type object, but not a subtype of the "
 "standard type object.  Return 0 in all other cases.  This function always "
 "succeeds."
 msgstr ""
-"Retorna verdadero si el objeto *o* es un objeto tipo, pero no un subtipo del "
-"objeto tipo estándar. Retorna falso en todos los demás casos."
+"Retorna un valor distinto de cero si el objeto *o* es un objeto tipo, pero "
+"no un subtipo del objeto tipo estándar. Retorna 0 en todos los demás casos. "
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/type.rst:38
 msgid "Clear the internal lookup cache. Return the current version tag."
@@ -94,14 +94,13 @@ msgstr ""
 "manual de los atributos o clases base del tipo."
 
 #: ../Doc/c-api/type.rst:62
-#, fuzzy
 msgid ""
 "Return non-zero if the type object *o* sets the feature *feature*. Type "
 "features are denoted by single bit flags."
 msgstr ""
-"Retorna verdadero si el tipo objeto *o* establece la característica "
-"*feature*. Las características de tipo se denotan con banderas de un solo "
-"bit."
+"Retorna un valor distinto de cero si el tipo objeto *o* establece la "
+"característica *feature*. Las características de tipo se indican mediante "
+"flags de un solo bit."
 
 #: ../Doc/c-api/type.rst:68
 msgid ""
@@ -186,12 +185,16 @@ msgid ""
 "Return the module object associated with the given type when the type was "
 "created using :c:func:`PyType_FromModuleAndSpec`."
 msgstr ""
+"Retorna el objeto módulo asociado con el tipo dado cuando se creó el tipo "
+"usando :c:func:`PyType_FromModuleAndSpec`."
 
 #: ../Doc/c-api/type.rst:119 ../Doc/c-api/type.rst:137
 msgid ""
 "If no module is associated with the given type, sets :py:class:`TypeError` "
 "and returns ``NULL``."
 msgstr ""
+"Si no hay ningún módulo asociado con el tipo dado, establece :py:class:"
+"`TypeError` y retorna ``NULL``."
 
 #: ../Doc/c-api/type.rst:122
 msgid ""
@@ -202,6 +205,13 @@ msgid ""
 "module as their superclass. See :c:type:`PyCMethod` to get the class that "
 "defines the method."
 msgstr ""
+"Esta función se suele utilizar para obtener el módulo en el que se define un "
+"método. Tenga en cuenta que en un método de este tipo, es posible que "
+"``PyType_GetModule(Py_TYPE(self))`` no retorne el resultado deseado. "
+"``Py_TYPE(self)`` puede ser una *subclass* de la clase deseada, y las "
+"subclases no están necesariamente definidas en el mismo módulo que su "
+"superclase. Consulte :c:type:`PyCMethod` para obtener la clase que define el "
+"método."
 
 #: ../Doc/c-api/type.rst:133
 msgid ""
@@ -209,12 +219,17 @@ msgid ""
 "is a shortcut for calling :c:func:`PyModule_GetState()` on the result of :c:"
 "func:`PyType_GetModule`."
 msgstr ""
+"Retorna el estado del objeto de módulo asociado con el tipo dado. Este es un "
+"atajo para llamar :c:func:`PyModule_GetState()` en el resultado de :c:func:"
+"`PyType_GetModule`."
 
 #: ../Doc/c-api/type.rst:140
 msgid ""
 "If the *type* has an associated module but its state is ``NULL``, returns "
 "``NULL`` without setting an exception."
 msgstr ""
+"Si el tipo *type* tiene un módulo asociado pero su estado es ``NULL``, "
+"retorna ``NULL`` sin establecer una excepción."
 
 #: ../Doc/c-api/type.rst:147
 msgid "Creating Heap-Allocated Types"
@@ -245,14 +260,14 @@ msgstr ""
 "los tipos contenidos en él como tipos básicos."
 
 #: ../Doc/c-api/type.rst:160
-#, fuzzy
 msgid ""
 "If *bases* is ``NULL``, the *Py_tp_bases* slot is used instead. If that also "
 "is ``NULL``, the *Py_tp_base* slot is used instead. If that also is "
 "``NULL``, the new type derives from :class:`object`."
 msgstr ""
 "Si *bases* es ``NULL``, en su lugar se usa la ranura *Py_tp_base*. Si eso "
-"también es ``NULL``, el nuevo tipo deriva de :class:`object`."
+"también es ``NULL``, en su lugar, se utiliza la ranura *Py_tp_base*. Si eso "
+"también es ``NULL``, el nuevo tipo se deriva de :class:`object`."
 
 #: ../Doc/c-api/type.rst:164
 msgid ""
@@ -262,15 +277,19 @@ msgid ""
 "c:func:`PyType_GetModule`. The associated module is not inherited by "
 "subclasses; it must be specified for each class individually."
 msgstr ""
+"El argumento *module* se puede utilizar para registrar el módulo en el que "
+"se define la nueva clase. Debe ser un objeto de módulo o ``NULL``. Si no es "
+"``NULL``, el módulo se asocia con el nuevo tipo y luego se puede recuperar "
+"con :c:func:`PyType_GetModule`. El módulo asociado no es heredado por "
+"subclases; debe especificarse para cada clase individualmente."
 
 #: ../Doc/c-api/type.rst:171
 msgid "This function calls :c:func:`PyType_Ready` on the new type."
 msgstr "Esta función llama :c:func:`PyType_Ready` en el tipo nuevo."
 
 #: ../Doc/c-api/type.rst:177
-#, fuzzy
 msgid "Equivalent to ``PyType_FromModuleAndSpec(NULL, spec, bases)``."
-msgstr "Equivalente a ``PyType_FromSpecWithBases(spec, NULL)``."
+msgstr "Equivalente a ``PyType_FromModuleAndSpec(NULL, spec, bases)``."
 
 #: ../Doc/c-api/type.rst:183
 msgid "Equivalent to ``PyType_FromSpecWithBases(spec, NULL)``."
@@ -353,13 +372,12 @@ msgstr ""
 "``Py_sq_length`` para establecer :c:member:`PySequenceMethods.sq_length`"
 
 #: ../Doc/c-api/type.rst:231
-#, fuzzy
 msgid ""
 "The following fields cannot be set at all using :c:type:`PyType_Spec` and :c:"
 "type:`PyType_Slot`:"
 msgstr ""
-"Los siguientes campos no se pueden establecer usando :c:type:`PyType_Spec` "
-"y :c:type:`PyType_Slot`:"
+"Los siguientes campos no se pueden configurar en absoluto usando :c:type:"
+"`PyType_Spec` y :c:type:`PyType_Slot`:"
 
 #: ../Doc/c-api/type.rst:234
 msgid ":c:member:`~PyTypeObject.tp_dict`"
@@ -382,37 +400,40 @@ msgid ":c:member:`~PyTypeObject.tp_weaklist`"
 msgstr ":c:member:`~PyTypeObject.tp_weaklist`"
 
 #: ../Doc/c-api/type.rst:239
-#, fuzzy
 msgid ":c:member:`~PyTypeObject.tp_vectorcall`"
-msgstr ":c:member:`~PyTypeObject.tp_dict`"
+msgstr ":c:member:`~PyTypeObject.tp_vectorcall`"
 
 #: ../Doc/c-api/type.rst:240
-#, fuzzy
 msgid ""
 ":c:member:`~PyTypeObject.tp_weaklistoffset` (see :ref:`PyMemberDef "
 "<pymemberdef-offsets>`)"
-msgstr ":c:member:`~PyTypeObject.tp_weaklistoffset`"
+msgstr ""
+":c:member:`~PyTypeObject.tp_weaklistoffset` (vea :ref:`PyMemberDef "
+"<pymemberdef-offsets>`)"
 
 #: ../Doc/c-api/type.rst:242
 msgid ""
 ":c:member:`~PyTypeObject.tp_dictoffset` (see :ref:`PyMemberDef <pymemberdef-"
 "offsets>`)"
 msgstr ""
+":c:member:`~PyTypeObject.tp_dictoffset` (vea :ref:`PyMemberDef <pymemberdef-"
+"offsets>`)"
 
 #: ../Doc/c-api/type.rst:244
 msgid ""
 ":c:member:`~PyTypeObject.tp_vectorcall_offset` (see :ref:`PyMemberDef "
 "<pymemberdef-offsets>`)"
 msgstr ""
+":c:member:`~PyTypeObject.tp_vectorcall_offset` (vea :ref:`PyMemberDef "
+"<pymemberdef-offsets>`)"
 
 #: ../Doc/c-api/type.rst:247
-#, fuzzy
 msgid ""
 "The following fields cannot be set using :c:type:`PyType_Spec` and :c:type:"
 "`PyType_Slot` under the limited API:"
 msgstr ""
 "Los siguientes campos no se pueden establecer usando :c:type:`PyType_Spec` "
-"y :c:type:`PyType_Slot`:"
+"y :c:type:`PyType_Slot` cuando se utiliza la API limitada:"
 
 #: ../Doc/c-api/type.rst:250
 msgid ":c:member:`~PyBufferProcs.bf_getbuffer`"
@@ -423,19 +444,20 @@ msgid ":c:member:`~PyBufferProcs.bf_releasebuffer`"
 msgstr ":c:member:`~PyBufferProcs.bf_releasebuffer`"
 
 #: ../Doc/c-api/type.rst:253
-#, fuzzy
 msgid ""
 "Setting :c:data:`Py_tp_bases` or :c:data:`Py_tp_base` may be problematic on "
 "some platforms. To avoid issues, use the *bases* argument of :py:func:"
 "`PyType_FromSpecWithBases` instead."
 msgstr ""
-"Estableciendo :c:data:`Py_tp_bases` puede ser problemático en algunas "
-"plataformas. Para evitar problemas, use el argumento *bases* de :py:func:"
-"`PyType_FromSpecWithBases` en su lugar."
+"Estableciendo :c:data:`Py_tp_bases` o :c:data:`Py_tp_base` puede ser "
+"problemático en algunas plataformas. Para evitar problemas, use el argumento "
+"*bases* de :py:func:`PyType_FromSpecWithBases` en su lugar."
 
 #: ../Doc/c-api/type.rst:260
 msgid "Slots in :c:type:`PyBufferProcs` in may be set in the unlimited API."
 msgstr ""
+"Las ranuras en :c:type:`PyBufferProcs` se pueden configurar en la API "
+"ilimitada."
 
 #: ../Doc/c-api/type.rst:264
 msgid ""
