--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 02:25+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 17:43+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/unicode.rst:6
 msgid "Unicode Objects and Codecs"
@@ -48,7 +49,6 @@ msgstr ""
 "rango completo de Unicode)."
 
 #: ../Doc/c-api/unicode.rst:20
-#, fuzzy
 msgid ""
 ":c:type:`Py_UNICODE*` and UTF-8 representations are created on demand and "
 "cached in the Unicode object.  The :c:type:`Py_UNICODE*` representation is "
@@ -96,6 +96,9 @@ msgid ""
 "APIs. All Unicode objects will be \"canonical\" since then. See :pep:`623` "
 "for more information."
 msgstr ""
+"El objeto Unicode \"heredado\" se eliminará en Python 3.12 con APIs "
+"obsoletas. Todos los objetos Unicode serán \"canónicos\" desde entonces. "
+"Consulte :pep:`623` para obtener más información."
 
 #: ../Doc/c-api/unicode.rst:43
 msgid "Unicode Type"
@@ -167,7 +170,6 @@ msgstr ""
 "de objetos Unicode:"
 
 #: ../Doc/c-api/unicode.rst:92
-#, fuzzy
 msgid ""
 "Return true if the object *o* is a Unicode object or an instance of a "
 "Unicode subtype.  This function always succeeds."
@@ -176,7 +178,6 @@ msgstr ""
 "un subtipo Unicode."
 
 #: ../Doc/c-api/unicode.rst:98
-#, fuzzy
 msgid ""
 "Return true if the object *o* is a Unicode object, but not an instance of a "
 "subtype.  This function always succeeds."
@@ -203,7 +204,7 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:115
 msgid "This API will be removed with :c:func:`PyUnicode_FromUnicode`."
-msgstr ""
+msgstr "Esta API será removida con :c:func:`PyUnicode_FromUnicode`."
 
 #: ../Doc/c-api/unicode.rst:120
 msgid ""
@@ -235,7 +236,7 @@ msgstr "Retorna los valores de la macro :c:func:`PyUnicode_KIND`."
 
 #: ../Doc/c-api/unicode.rst:149
 msgid "``PyUnicode_WCHAR_KIND`` is deprecated."
-msgstr ""
+msgstr "``PyUnicode_WCHAR_KIND`` está deprecada."
 
 #: ../Doc/c-api/unicode.rst:154
 msgid ""
@@ -373,12 +374,17 @@ msgid ""
 "Return ``1`` if the string is a valid identifier according to the language "
 "definition, section :ref:`identifiers`. Return ``0`` otherwise."
 msgstr ""
+"Retorna ``1`` si la cadena de caracteres es un identificador válido de "
+"acuerdo con la definición del lenguaje, sección :ref:`identifiers`. Retorna "
+"``0`` de lo contrario."
 
 #: ../Doc/c-api/unicode.rst:258
 msgid ""
 "The function does not call :c:func:`Py_FatalError` anymore if the string is "
 "not ready."
 msgstr ""
+"La función ya no llama a :c:func:`Py_FatalError` si la cadena de caracteres "
+"no está lista."
 
 #: ../Doc/c-api/unicode.rst:264
 msgid "Unicode Character Properties"
@@ -599,7 +605,6 @@ msgstr ""
 "compartido, es decir, no se permite la modificación de los datos."
 
 #: ../Doc/c-api/unicode.rst:434
-#, fuzzy
 msgid ""
 "If *u* is ``NULL``, this function behaves like :c:func:"
 "`PyUnicode_FromUnicode` with the buffer set to ``NULL``.  This usage is "
@@ -1150,7 +1155,6 @@ msgstr ""
 "cualquiera de las macros de acceso, como :c:func:`PyUnicode_KIND`."
 
 #: ../Doc/c-api/unicode.rst:703
-#, fuzzy
 msgid ""
 "Part of the old-style Unicode API, please migrate to using :c:func:"
 "`PyUnicode_FromKindAndData`, :c:func:`PyUnicode_FromWideChar`, or :c:func:"
@@ -1178,14 +1182,14 @@ msgstr ""
 "cuando se usara en la mayoría de las funciones de C."
 
 #: ../Doc/c-api/unicode.rst:720 ../Doc/c-api/unicode.rst:748
-#, fuzzy
 msgid ""
 "Part of the old-style Unicode API, please migrate to using :c:func:"
 "`PyUnicode_AsUCS4`, :c:func:`PyUnicode_AsWideChar`, :c:func:"
 "`PyUnicode_ReadChar` or similar new APIs."
 msgstr ""
-"Por favor migrar para usar :c:func:`PyUnicode_AsUCS4`, :c:func:"
-"`PyUnicode_AsWideChar`, :c:func:`PyUnicode_ReadChar` o API nuevas similares."
+"Parte del estilo antiguo de la API Unicode, por favor migrar para usar :c:"
+"func:`PyUnicode_AsUCS4`, :c:func:`PyUnicode_AsWideChar`, :c:func:"
+"`PyUnicode_ReadChar` o APIs nuevas similares."
 
 #: ../Doc/c-api/unicode.rst:726
 msgid ""
@@ -1198,13 +1202,12 @@ msgstr ""
 "valor decimal. Retorna ``NULL`` si ocurre una excepción."
 
 #: ../Doc/c-api/unicode.rst:732
-#, fuzzy
 msgid ""
 "Part of the old-style :c:type:`Py_UNICODE` API; please migrate to using :c:"
 "func:`Py_UNICODE_TODECIMAL`."
 msgstr ""
-"Parte del viejo estilo de la API :c:type:`Py_UNICODE`; por favor migrar para "
-"usar :c:func:`PyUnicode_AsEncodedString`."
+"Parte del estilo antiguo de la API :c:type:`Py_UNICODE`; por favor migrar "
+"para usar :c:func:`Py_UNICODE_TODECIMAL`."
 
 #: ../Doc/c-api/unicode.rst:737
 msgid ""
@@ -1515,7 +1518,7 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:957
 msgid "wchar_t Support"
-msgstr "Soporte wchar_t"
+msgstr "soporte wchar_t"
 
 #: ../Doc/c-api/unicode.rst:959
 msgid ":c:type:`wchar_t` support for platforms which support it:"
@@ -1617,7 +1620,6 @@ msgstr ""
 "incorporado :func:`str`."
 
 #: ../Doc/c-api/unicode.rst:1016
-#, fuzzy
 msgid ""
 "Setting encoding to ``NULL`` causes the default encoding to be used which is "
 "UTF-8.  The file system calls should use :c:func:`PyUnicode_FSConverter` for "
@@ -2307,7 +2309,7 @@ msgstr ""
 "como ordinales Unicode) o ``None``. Los bytes de datos sin asignar - los que "
 "causan un :exc:`LookupError`, así como los que se asignan a ``None``, "
 "``0xFFFE`` o ``'\\ ufffe'``, se tratan como asignaciones indefinidas y "
-"causan un error"
+"causan un error."
 
 #: ../Doc/c-api/unicode.rst:1484
 msgid ""
@@ -2356,15 +2358,14 @@ msgid "The following codec API is special in that maps Unicode to Unicode."
 msgstr "La siguiente API de códec es especial en que asigna Unicode a Unicode."
 
 #: ../Doc/c-api/unicode.rst:1511
-#, fuzzy
 msgid ""
 "Translate a string by applying a character mapping table to it and return "
 "the resulting Unicode object. Return ``NULL`` if an exception was raised by "
 "the codec."
 msgstr ""
-"Traduce un búfer :c:type:`Py_UNICODE` del tamaño *size* dado al aplicarle "
-"una tabla de *mapping* de caracteres y retornar el objeto Unicode "
-"resultante. Retorna ``NULL`` cuando el códec provocó una excepción."
+"Traduce una cadena de caracteres aplicando una tabla de mapeo y retornando  "
+"el objeto Unicode resultante. Retorna ``NULL`` cuando el códec provocó una "
+"excepción."
 
 #: ../Doc/c-api/unicode.rst:1515
 msgid ""
@@ -2666,7 +2667,7 @@ msgstr ":const:`Py_True` o :const:`Py_False` para comparaciones exitosas"
 #: ../Doc/c-api/unicode.rst:1705
 msgid ":const:`Py_NotImplemented` in case the type combination is unknown"
 msgstr ""
-":const:`Py_NotImplemented` en caso que se desconozca la combinación de tipos."
+":const:`Py_NotImplemented` en caso que se desconozca la combinación de tipos"
 
 #: ../Doc/c-api/unicode.rst:1707
 msgid ""
@@ -2735,7 +2736,7 @@ msgstr ""
 "`PyUnicode_InternInPlace`, que retorna un nuevo objeto de cadena de "
 "caracteres Unicode que ha sido creado internamente o una nueva "
 "referencia(\"propia\") a un objeto de cadena de caracteres interno anterior "
-"con el mismo valor"
+"con el mismo valor."
 
 #~ msgid "Clear the free list. Return the total number of freed items."
 #~ msgstr ""
