Quitando últimos fuzzy y ajustando traducción

--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -770,7 +770,7 @@ msgid ""
 msgstr ""
 "Retorna ``1`` si *obj* admite la interfaz de búfer; de lo contrario, ``0`` "
 "cuando se retorna ``1``, no garantiza que :c:func:`PyObject_GetBuffer` tenga "
-"éxito. Esta función siempre tiene éxito."
+"éxito. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/buffer.rst:439
 msgid ""
@@ -844,7 +844,7 @@ msgstr ""
 "Retorna ``1`` si la memoria definida por *view* es de estilo C (*order* es "
 "``'C'``) o de estilo Fortran (*order* es ``'F'``) :term:`contiguous` o uno "
 "cualquiera (*order* es ``'A'``). Retorna ``0`` de lo contrario. Esta función "
-"siempre tiene éxito."
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/buffer.rst:482
 msgid ""
