--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -45,7 +45,7 @@ msgid ""
 "the given *encoding*.  This function always succeeds."
 msgstr ""
 "Retorna ``1`` o ``0`` dependiendo de si hay un códec registrado para el "
-"*encoding* dado. Esta función siempre tiene éxito."
+"*encoding* dado. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/codec.rst:20
 msgid "Generic codec based encoding API."
