--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -69,7 +69,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateType` o un "
 "subtipo de :c:data:`PyDateTime_DateType`. *ob* no debe ser ``NULL``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:37
 msgid ""
@@ -87,7 +87,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateTimeType` o un "
 "subtipo de :c:data:`PyDateTime_DateTimeType`. *ob* no debe ser ``NULL``. "
-"Esta función siempre tiene éxito."
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:50
 msgid ""
@@ -123,7 +123,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DeltaType` o un "
 "subtipo de :c:data:`PyDateTime_DeltaType`. *ob* no debe ser ``NULL``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:76
 msgid ""
@@ -141,7 +141,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TZInfoType` o un "
 "subtipo de :c:data:`PyDateTime_TZInfoType`.  *ob* no debe ser ``NULL``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/datetime.rst:89
 msgid ""
