--- a/c-api/mapping.po
+++ b/c-api/mapping.po
@@ -45,7 +45,7 @@ msgstr ""
 "rebanado (*slicing*), y ``0`` de lo contrario. Tenga en cuenta que retorna "
 "``1`` para las clases de Python con un método :meth:`__getitem__` ya que, en "
 "general, es imposible determinar qué tipo de claves admite. Esta función "
-"siempre tiene éxito."
+"siempre finaliza con éxito."
 
 #: ../Doc/c-api/mapping.rst:25
 msgid ""
@@ -104,7 +104,7 @@ msgid ""
 msgstr ""
 "Retorna ``1`` si el objeto de mapeo tiene la clave *key* y ``0`` de lo "
 "contrario. Esto es equivalente a la expresión de Python ``key in o``. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/mapping.rst:63
 msgid ""
