--- a/c-api/memoryview.po
+++ b/c-api/memoryview.po
@@ -89,7 +89,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si el objeto *obj* es un objeto de vista de memoria. "
 "Actualmente no está permitido crear subclases de :class:`memoryview`. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 # crashes -> bloquearse
 #: ../Doc/c-api/memoryview.rst:54
