--- a/c-api/number.po
+++ b/c-api/number.po
@@ -32,7 +32,7 @@ msgid ""
 "otherwise. This function always succeeds."
 msgstr ""
 "Retorna ``1`` si el objeto *o* proporciona protocolos numéricos, y falso en "
-"caso contrario. Esta función siempre tiene éxito."
+"caso contrario. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/number.rst:14
 msgid "Returns ``1`` if *o* is an index integer."
