--- a/c-api/object.po
+++ b/c-api/object.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-07 22:35+0200\n"
+"PO-Revision-Date: 2021-08-16 13:01+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/object.rst:6
 msgid "Object Protocol"
@@ -429,7 +430,6 @@ msgstr ""
 "de error, retorna ``-1``."
 
 #: ../Doc/c-api/object.rst:289
-#, fuzzy
 msgid ""
 "When *o* is non-``NULL``, returns a type object corresponding to the object "
 "type of object *o*. On failure, raises :exc:`SystemError` and returns "
@@ -439,14 +439,13 @@ msgid ""
 ">ob_type``, which returns a pointer of type :c:type:`PyTypeObject*`, except "
 "when the incremented reference count is needed."
 msgstr ""
-"Cuando *o* no es ``NULL``, retorna un objeto de tipo correspondiente al tipo "
-"de objeto del objeto *o*. En caso de error, genera :exc:`SystemError` y "
+"Cuando *o* no es ``NULL``, retorna un tipo de objeto correspondiente al tipo "
+"de objeto del objeto *o*. En caso de falla, lanza :exc:`SystemError` y "
 "retorna ``NULL``. Esto es equivalente a la expresión de Python ``type(o)``. "
-"Esta función incrementa el conteo de referencia del valor de retorno. "
-"Realmente no hay ninguna razón para usar esta función en lugar de la "
-"expresión común ``o- ob_type``, que retorna un puntero de tipo :c:type:"
-"`PyTypeObject\\*`, excepto cuando se necesita el recuento de referencia "
-"incrementado."
+"Esta función incrementa el recuento de referencia del valor de retorno. "
+"Realmente no hay razón para usar esta función en lugar de la expresión común "
+"``o->ob_type``, que retorna un puntero de tipo :c: type:`PyTypeObject*`, "
+"excepto cuando se necesita el recuento de referencias incrementado."
 
 #: ../Doc/c-api/object.rst:300
 msgid ""
