--- a/c-api/bool.po
+++ b/c-api/bool.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 03:05+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-16 13:03+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/bool.rst:6
 msgid "Boolean Objects"
@@ -38,11 +39,12 @@ msgstr ""
 "Sin embargo, los siguientes macros están disponibles."
 
 #: ../Doc/c-api/bool.rst:16
-#, fuzzy
 msgid ""
 "Return true if *o* is of type :c:data:`PyBool_Type`.  This function always "
 "succeeds."
-msgstr "Retorna verdad si *o* es de tipo :c:data:`PyBool_Type`."
+msgstr ""
+"Retorna verdad si *o* es de tipo :c:data:`PyBool_Type`. Esta función siempre "
+"finaliza con éxito."
 
 #: ../Doc/c-api/bool.rst:22
 msgid ""
