--- a/c-api/bytearray.po
+++ b/c-api/bytearray.po
@@ -52,7 +52,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto de arreglo de bytes o una "
 "instancia de un subtipo del tipo arreglo de bytes. Esta función siempre "
-"tiene éxito."
+"finaliza con éxito."
 
 #: ../Doc/c-api/bytearray.rst:33
 msgid ""
@@ -61,7 +61,7 @@ msgid ""
 msgstr ""
 "Retorna verdadero si el objeto *o* es un objeto de arreglo de bytes, pero no "
 "una instancia de un subtipo del tipo arreglo de bytes. Esta función siempre "
-"tiene éxito."
+"finaliza con éxito."
 
 #: ../Doc/c-api/bytearray.rst:38
 msgid "Direct API functions"
