--- a/c-api/code.po
+++ b/c-api/code.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 15:55+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-16 13:04+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/code.rst:8
 msgid "Code Objects"
@@ -52,11 +53,12 @@ msgstr ""
 "Python :class:`code`."
 
 #: ../Doc/c-api/code.rst:30
-#, fuzzy
 msgid ""
 "Return true if *co* is a :class:`code` object.  This function always "
 "succeeds."
-msgstr "Retorna verdadero si *co* es un objeto :class:`code`."
+msgstr ""
+"Retorna verdadero si *co* es un objeto :class:`code`. Esta función siempre "
+"finaliza con éxito."
 
 #: ../Doc/c-api/code.rst:34
 msgid "Return the number of free variables in *co*."
