--- a/c-api/contextvars.po
+++ b/c-api/contextvars.po
@@ -87,7 +87,7 @@ msgid ""
 "``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es de tipo :c:data:`PyContext_Type`. *o* no debe "
-"ser ``NULL``. Esta función siempre tiene éxito."
+"ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/contextvars.rst:67
 msgid ""
@@ -95,7 +95,7 @@ msgid ""
 "``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es de tipo :c:data:`PyContextVar_Type`. *o* no debe "
-"ser ``NULL``. Esta función siempre tiene éxito."
+"ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/contextvars.rst:72
 msgid ""
@@ -103,7 +103,7 @@ msgid ""
 "``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es de tipo :c:data:`PyContextToken_Type`. *o* no "
-"debe ser ``NULL``. Esta función siempre tiene éxito."
+"debe ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/contextvars.rst:76
 msgid "Context object management functions:"
@@ -219,10 +219,3 @@ msgstr ""
 "Restablece el estado de la variable de contexto *var* a la que estaba antes :"
 "c:func:`PyContextVar_Set` que retornó el *token* fue llamado. Esta función "
 "retorna ``0`` en caso de éxito y ``-1`` en caso de error."
-
-#~ msgid ""
-#~ "Clear the context variable free list. Return the total number of freed "
-#~ "items.  This function always succeeds."
-#~ msgstr ""
-#~ "Borra la lista libre de variables de contexto. Retorna el número total de "
-#~ "artículos liberados. Esta función siempre tiene éxito."
