--- a/c-api/coro.po
+++ b/c-api/coro.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 03:22+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-16 13:04+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/coro.rst:6
 msgid "Coroutine Objects"
@@ -42,13 +43,12 @@ msgid "The type object corresponding to coroutine objects."
 msgstr "El tipo de objeto correspondiente a los objetos corrutina."
 
 #: ../Doc/c-api/coro.rst:26
-#, fuzzy
 msgid ""
 "Return true if *ob*'s type is :c:type:`PyCoro_Type`; *ob* must not be "
 "``NULL``. This function always succeeds."
 msgstr ""
 "Retorna verdadero si el tipo de *ob* es :c:type:`PyCoro_Type`; *ob* no debe "
-"ser ``NULL``."
+"ser ``NULL``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/coro.rst:32
 msgid ""
