--- a/c-api/function.po
+++ b/c-api/function.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 16:22+0200\n"
+"PO-Revision-Date: 2021-08-16 13:04+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/function.rst:6
 msgid "Function Objects"
@@ -44,14 +45,14 @@ msgstr ""
 "FunctionType``."
 
 #: ../Doc/c-api/function.rst:28
-#, fuzzy
 msgid ""
 "Return true if *o* is a function object (has type :c:data:"
 "`PyFunction_Type`). The parameter must not be ``NULL``.  This function "
 "always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es un objeto función (tiene tipo :c:data:"
-"`PyFunction_Type`). El parámetro no debe ser ``NULL``."
+"`PyFunction_Type`). El parámetro no debe ser ``NULL``. Esta función siempre "
+"finaliza con éxito."
 
 #: ../Doc/c-api/function.rst:34
 msgid ""
