--- a/c-api/iter.po
+++ b/c-api/iter.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 03:18+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-16 13:04+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/iter.rst:6
 msgid "Iterator Protocol"
@@ -30,11 +31,12 @@ msgid "There are two functions specifically for working with iterators."
 msgstr "Hay dos funciones específicas para trabajar con iteradores."
 
 #: ../Doc/c-api/iter.rst:12
-#, fuzzy
 msgid ""
 "Return true if the object *o* supports the iterator protocol.  This function "
 "always succeeds."
-msgstr "Retorna verdadero si el objeto *o* admite el protocolo iterador."
+msgstr ""
+"Retorna verdadero si el objeto *o* admite el protocolo iterador. Esta "
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/iter.rst:18
 msgid ""
