--- a/c-api/objbuffer.po
+++ b/c-api/objbuffer.po
@@ -86,7 +86,7 @@ msgid ""
 "Otherwise returns ``0``.  This function always succeeds."
 msgstr ""
 "Retorna ``1`` si *o* admite la interfaz de búfer legible de segmento único. "
-"De lo contrario, retorna ``0``. Esta función siempre tiene éxito."
+"De lo contrario, retorna ``0``. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/objbuffer.rst:44
 msgid ""
