--- a/c-api/slice.po
+++ b/c-api/slice.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 22:38+0200\n"
+"PO-Revision-Date: 2021-08-16 13:05+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/slice.rst:6
 msgid "Slice Objects"
@@ -34,12 +35,12 @@ msgstr ""
 "en la capa de Python."
 
 #: ../Doc/c-api/slice.rst:17
-#, fuzzy
 msgid ""
 "Return true if *ob* is a slice object; *ob* must not be ``NULL``.  This "
 "function always succeeds."
 msgstr ""
-"Retorna verdadero si *ob* es un objeto rebanada; *ob* no debe ser ``NULL``."
+"Retorna verdadero si *ob* es un objeto rebanada; *ob* no debe ser ``NULL``. "
+"Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/slice.rst:23
 msgid ""
